# ctest

./: CMakeLists.txt  README.md  TODO.rst
.github/workflows/: tests.yml
cmake/: StaticAnalyzers.cmake  ci.cmake  common.cmake
include/: ctest.h
tests/: CMakeLists.txt  arguments.cpp  cli.hpp  empty.cpp  main.cpp  mytests.cpp  parser.hpp  pather.hpp  test_another.cpp  test_arguments.cpp  test_exception.cpp  test_main.cpp  test_mytests.cpp  test_single.cpp
tests/cmake/: another_test.cmake  main_tests.cmake  setup_test_commands.cmake
